# Quick-Survey

./: .gitignore  QuickSurvey_API.postman_collection.json  README.md  pyproject.toml  run.py
backend/: config.example.yml  create_test_survey.py  migrate_add_time_fields.py  pyproject.toml  requirements.txt  run.py
backend/src/app/: __init__.py  main.py
backend/src/app/api/: __init__.py  activities.py  internal.py  public.py  submissions.py  surveys.py
backend/src/app/core/: __init__.py  config.py  jwt.py  rate_limit.py  security.py
backend/src/app/db/: database.py
backend/src/app/migrations/: 006_add_question_is_pinned.sql  007_fix_answers_question_fk.sql  008_add_question_condition.sql  009_add_question_role.sql  (+3 more)
backend/tests/: test_bot_notify.py  test_cleanup.py  test_ip_location.py  test_query_rate_limit.py  test_registration_code.py
deploy/: README.md  deploy-server.sh  nginx.conf  pack.sh  quick-survey.service
frontend/: .env  .env.example  .env.production  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: Layout.tsx  ThemeToggle.tsx  comp-545.tsx
frontend/src/lib/: api.ts  image-compress.ts  submissions-storage.ts  turnstile-preload.ts  utils.ts
frontend/src/pages/: HomePage.tsx  SurveyPage.tsx
frontend/src/providers/: ThemeProvider.tsx
frontend/src/types/: survey.ts
src/app/: main.py
src/app/api/: __init__.py  public.py
src/app/core/: __init__.py  config.py  deps.py
src/app/db/: __init__.py
src/app/schemas/: schemas.py
src/app/services/: survey.py
(+22 files in other folders)
